# lexi_data_analysis

./: README.md  pyproject.toml
data/level_1c/cdf/1.0.0/: lexi_payload_1740902672_21928_level_1c_1.0.0.cdf  lexi_payload_1740902717_24376_level_1c_1.0.0.cdf  lexi_payload_1740903604_585_level_1c_1.0.0.cdf  lexi_payload_1740905104_24998_level_1c_1.0.0.cdf  lexi_payload_1740905404_28395_level_1c_1.0.0.cdf  lexi_payload_1740905705_36553_level_1c_1.0.0.cdf  lexi_payload_1740906005_699_level_1c_1.0.0.cdf  lexi_payload_1740906305_6905_level_1c_1.0.0.cdf  lexi_payload_1740907505_24459_level_1c_1.0.0.cdf  lexi_payload_1740909306_13959_level_1c_1.0.0.cdf  lexi_payload_1740909606_16332_level_1c_1.0.0.cdf  lexi_payload_1740909906_20837_level_1c_1.0.0.cdf  lexi_payload_1740912007_13312_level_1c_1.0.0.cdf  lexi_payload_1740913207_30220_level_1c_1.0.0.cdf  lexi_payload_1740914708_13728_level_1c_1.0.0.cdf  lexi_payload_1740915008_23486_level_1c_1.0.0.cdf  lexi_payload_1740915308_24632_level_1c_1.0.0.cdf  lexi_payload_1740915608_28650_level_1c_1.0.0.cdf  lexi_payload_1740917109_18195_level_1c_1.0.0.cdf  lexi_payload_1740918009_28388_level_1c_1.0.0.cdf  lexi_payload_1740918309_32864_level_1c_1.0.0.cdf  lexi_payload_1740918609_37000_level_1c_1.0.0.cdf  lexi_payload_1740919810_12816_level_1c_1.0.0.cdf  lexi_payload_1740920410_23602_level_1c_1.0.0.cdf  lexi_payload_1740920710_27442_level_1c_1.0.0.cdf  lexi_payload_1740921310_34843_level_1c_1.0.0.cdf  lexi_payload_1740922211_4417_level_1c_1.0.0.cdf  lexi_payload_1740922811_14159_level_1c_1.0.0.cdf  lexi_payload_1740924612_268_level_1c_1.0.0.cdf  (+810 more)
(+1078 files in other folders)
