[tool.poetry]
name = "lexi_data_analysis"
version = "0.1.0"
description = "Data analysis for all LEXI binary data"
authors = ["Ramiz Qudsi <qudsiramiz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pandas = "^2.0.3"
seaborn = "^0.12.2"
tabulate = "^0.9.0"
spacepy = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
